--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.0.4",
     "@supabase/supabase-js": "^2.38.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.363.0",
-    "next": "^15.5.3",
+    "next": "^15.0.0",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "20",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.52.0",
-    "eslint-config-next": "15.0.0",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.6",
-    "typescript": "5.3.2"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^15.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.2"
   }
 }
