--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.0.4",
     "@supabase/supabase-js": "^2.38.0",
